--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.7"
 djangorestframework = "^3.15.2"
 pillow = "^11.1.0"
 psycopg2-binary = "^2.9.10"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
