--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
 black = "^25.1.0"
 flake8 = "^7.1.2"
 isort = "^6.0.1"
+django-filter = "^25.1"
 
 
 [build-system]
