--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "^25.1.0"
 flake8 = "^7.1.2"
 isort = "^6.0.1"
 django-filter = "^25.1"
+djangorestframework-simplejwt = "^5.5.0"
 
 
 [build-system]
