--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ flake8 = "^7.1.2"
 isort = "^6.0.1"
 django-filter = "^25.1"
 djangorestframework-simplejwt = "^5.5.0"
+drf-yasg = "^1.21.10"
+stripe = "^12.0.0"
+requests = "^2.32.3"
 
 
 [build-system]
