--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ djangorestframework-simplejwt = "^5.5.0"
 drf-yasg = "^1.21.10"
 stripe = "^12.0.0"
 requests = "^2.32.3"
+forex-python = "^1.8"
 
 
 [build-system]
