--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ stripe = "^12.0.0"
 requests = "^2.32.3"
 forex-python = "^1.8"
 ipython = "^9.1.0"
+celery = "^5.5.1"
+django-celery-beat = "^2.7.0"
+pytz = "^2025.2"
+redis = "^5.2.1"
 
 
 [build-system]
