--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,9 @@ services:
       - ./.env
 
   redis:
-    image: redis:alpine
+    image: redis:latest
+    expose:
+      - "6379"
 
 volumes:
   static_volume:
