--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,16 @@ services:
       - ./.env
 
   redis:
-    image: redis:latest
-    expose:
-      - "6379"
+    image: redis:7.0.2-alpine
+    container_name: redis
+    command: redis-server --save 20 1 --loglevel warning
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: redis-cli ping
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   static_volume:
