--- a/.env-sample
+++ b/.env-sample
@@ -2,8 +2,20 @@ DEBUG=
 
 SECRET_KEY=
 
-NAME=
-USER_DB=
-PASSWORD=
-HOST=
+POSTGRES_DB=
+POSTGRES_PASSWORD=
+POSTGRES_USER=
+POSTGRES_HOST=
 PORT=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_PASSWORD=
+EMAIL_HOST_USER=
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
+
+API_KEY=
