--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,66 @@
-events {
-    worker_connections 1024;
+; events {
+;     worker_connections 1024;
+; }
+;
+; http {
+;     server {
+;         listen 80;
+;         server_name localhost;
+;
+;         root /usr/share/nginx/html;
+;         index index.html;
+;
+;         location / {
+;             try_files $uri $uri/ =404;
+;         }
+;     }
+; }
+
+server {
+    root /app/;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+        proxy_send_timeout 1800;
+        send_timeout 1800;
+    }
+
+    location /admin {
+        proxy_pass http://host.docker.internal:8080;
+    }
+
+    location /static/admin {
+        proxy_pass http://host.docker.internal:8080;
+    }
+
+    location /media {
+        proxy_pass http://host.docker.internal:8080;
+    }
+
+    location /api {
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://host.docker.internal:8080;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+        proxy_send_timeout 1800;
+        send_timeout 1800;
+    }
 }
 
-http {
-    server {
-        listen 80;
-        server_name localhost;
-
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ =404;
-        }
+server {
+    listen 8080;
+#     server_name foo.com;
+    location / {
+        proxy_pass http://host.docker.internal:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect ~*http://[^/]+(/.*)$ $1;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+        proxy_send_timeout 1800;
+        send_timeout 1800;
     }
 }
