--- a/nginx/Dockerfile.nginx
+++ b/nginx/Dockerfile.nginx
@@ -1,5 +1,15 @@
-FROM nginx:latest
+FROM nginx:1.25-alpine
 
+# Удаляем дефолтный конфиг
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Копируем наш конфиг
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 
-COPY html/ /usr/share/nginx/html/
+# Создаем директории для логов
+RUN mkdir -p /var/log/nginx
+
+# Открываем порт 80
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
