--- a/nginx/Dockerfile.nginx
+++ b/nginx/Dockerfile.nginx
@@ -1,15 +1,5 @@
-FROM nginx:1.25-alpine
+FROM nginx:latest
 
-# Удаляем дефолтный конфиг
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Копируем наш конфиг
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 
-# Создаем директории для логов
-RUN mkdir -p /var/log/nginx
-
-# Открываем порт 80
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+COPY html/ /usr/share/nginx/html/
