--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,80 +1,17 @@
-; events {
-;     worker_connections 1024;
-; }
-;
-; http {
-;     server {
-;         listen 80;
-;         server_name localhost;
-;
-;         root /usr/share/nginx/html;
-;         index index.html;
-;
-;         location / {
-;             try_files $uri $uri/ =404;
-;         }
-;     }
-; }
-
-worker_processes auto;
-
 events {
     worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    sendfile on;
-    keepalive_timeout 65;
-    client_max_body_size 20M;
-
-    # Логирование
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Настройки gzip
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Сервер для статических файлов
     server {
         listen 80;
         server_name localhost;
 
-        # Обработка статики
-        location /static/ {
-            alias /static/;
-            expires 30d;
-            add_header Cache-Control "public";
-        }
+        root /usr/share/nginx/html;
+        index index.html;
 
-        # Обработка медиа (если нужно)
-        location /media/ {
-            alias /media/;
-            expires 30d;
-            add_header Cache-Control "public";
-        }
-
-        # Проксирование запросов к Django
         location / {
-            proxy_pass http://web:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
-
-            # Для WebSocket (если используется)
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # Ошибки
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
+            try_files $uri $uri/ =404;
         }
     }
 }
