the problem with launching wia a terminal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       sh -c 
       "python manage.py makemigrations &&
       python manage.py migrate &&
-      python manage.py runserver 127.0.0.0:8000"
+      gunicorn nginx_with_static_media.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/code
       - static_volume:/code/static
@@ -27,8 +27,7 @@ services:
 
   nginx:
     build:
-      context: .
-      dockerfile: nginx/Dockerfile.nginx
+      context: ./nginx
     ports:
       - "80:80"
     volumes:
