--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:latest
 RUN mkdir -p /app/staticfiles
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/html/index.html /usr/share/nginx/html/index.html
 EXPOSE 80
