--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Set up Docker
+        uses: actions/setup-docker@v2
+
       - name: Cache Poetry dependencies
         uses: actions/cache@v3
         with:
