--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+
 events {
     worker_connections 1024;
 }
@@ -14,7 +18,7 @@ http {
         listen 80;
         server_name _;
         location /static/ {
-            alias /code/staticfiles;
+            alias /app/staticfiles/;
         }
 
         location / {
