the problem with launching wia a browser

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Rerun
         run: |
-          cd HomeworkDRF
+          cd ~/HomeworkDRF
           git pull origin feature
           docker-compose down
           docker-compose up --build -d
