--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       "python manage.py makemigrations && \
       python manage.py migrate && \
       python manage.py collectstatic --noinput && \
-      python manage.py runserver 0.0.0.0:8000"
+      gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/code
       - static_volume:/app/staticfiles/
