--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,8 +17,16 @@ http {
     server {
         listen 80;
         server_name _;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
         location /static/ {
             alias /app/staticfiles/;
+        }
+
+        location = / {
+            rewrite ^ /index.html break;
         }
 
         location / {
